Update app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
                 </ion-item-divider>
                 <ion-list lines="none">
                     <ion-item>
-                        <ion-label><span class="my-uni">Dark mode အမှောင်စနစ်</span></ion-label>
+                        <ion-label><span class="my-uni">အမှောင်စနစ်</span></ion-label>
                         <ion-toggle [(ngModel)]="isDarkMode"></ion-toggle>
                     </ion-item>
                 </ion-list>
