Update about component

--- a/src/app/about/about-modal.component.html
+++ b/src/app/about/about-modal.component.html
@@ -10,10 +10,29 @@
         <div class="about-content my-uni" lang="my">
             <div class="about-section what-is-new">
                 <h3 class="subtitle">ယခုဗားရှင်းအသစ်တွင်</h3>
-                <p>အချို့သော bug များကိုပြုပြင်ထားခြင်းနှင့် အခြားတိုးတက်မှုများ ပါဝင်ပါတယ်။</p>
+                <ul class="features-list">
+                    <li>
+                        အက်ပလီကေးရှင်း ဘာသာစကားကို မြန်မာဘာသာဖြင့် ဖော်ပြထားခြင်း
+                    </li>
+                    <li>
+                        ဖတ်ရှုရာတွင်အဆင်ပြေစေရန် textarea များကို  ပြင်ဆင်ပေးထားခြင်း
+                    </li>
+                    <li>
+                        ပြောင်းပြီးစာသားများကိုအလွယ်တကူ ကူးယူနိုင်ရန် ခလုတ်ထည့်ပေးထားခြင်း
+                    </li>
+                    <li>
+                        ဇော်ဂျီ၊ယူနီကုတ်အလိုအလျောက်သိရှိမှု ပိုမိုတိုးတက်လာခြင်း
+                    </li>
+                    <li>
+                        Android ဗားရှင်းအသစ်များတွင်ပါ (Android 11 အပါအဝင်) အသုံးပြုလာနိုင်ခြင်း
+                    </li>
+                    <li>
+                        အချို့သော bug များကိုပြုပြင်ထားခြင်းနှင့် အခြားတိုးတက်မှုများ ပါဝင်ပါတယ်။
+                    </li>
+                </ul>
             </div>
             <div class="about-section features">
-                <h3 class="subtitle">ထူးခြားချက်များ</h3>
+                <h3 class="subtitle">ဤအက်ပ်၏ ထူးခြားချက်များ</h3>
                 <ul class="features-list">
                     <li>
                         ဇော်ဂျီ နှင့် မြန်မာ ယူနီကုတ် တို့ကို အပြန်အလှန် အမှားအယွင်းမရှိ တိကျမှန်ကန်စွာ
@@ -90,7 +109,7 @@
 <ion-footer>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-button (click)="dismissModal()">CONTINUE
+            <ion-button (click)="dismissModal()"><span class="my-uni">ရှေ့ဆက်ရန်</span>
                 <ion-icon slot="end" name="arrow-forward">
                 </ion-icon>
             </ion-button>
