--- a/src/styles/ion-components.scss
+++ b/src/styles/ion-components.scss
@@ -15,6 +15,19 @@
         font-weight: $font-weight-base;
     }
 
+    ion-popover.my-uni {
+        ion-select-popover {
+            ion-list {
+                ion-item {
+                    ion-label {
+                        font-family: "Noto Sans Myanmar UI", "Myanmar Text", Pyidaungsu, Padauk, Myanmar3, sans-serif;
+                        line-height: 1.6;
+                    }
+                }
+            }
+        }
+    }
+
     ion-select-popover {
         ion-list {
             ion-item {
