Update about component

--- a/src/app/about/about-modal.component.html
+++ b/src/app/about/about-modal.component.html
@@ -12,19 +12,7 @@
                 <h3 class="subtitle">ယခုဗားရှင်းအသစ်တွင်</h3>
                 <ul class="features-list">
                     <li>
-                        အက်ပလီကေးရှင်း ဘာသာစကားကို မြန်မာဘာသာဖြင့် ဖော်ပြထားခြင်း
-                    </li>
-                    <li>
-                        ဖတ်ရှုရာတွင်အဆင်ပြေစေရန် textarea များကို  ပြင်ဆင်ပေးထားခြင်း
-                    </li>
-                    <li>
-                        ပြောင်းပြီးစာသားများကိုအလွယ်တကူ ကူးယူနိုင်ရန် ခလုတ်ထည့်ပေးထားခြင်း
-                    </li>
-                    <li>
-                        ဇော်ဂျီ၊ယူနီကုတ်အလိုအလျောက်သိရှိမှု ပိုမိုတိုးတက်လာခြင်း
-                    </li>
-                    <li>
-                        Android ဗားရှင်းအသစ်များတွင်ပါ (Android 11 အပါအဝင်) အသုံးပြုလာနိုင်ခြင်း
+                        textarea auto sizing ကို ပိုမိုကောင်းမွန်အောင်ပြင်ဆင်ထားခြင်း
                     </li>
                     <li>
                         အချို့သော bug များကိုပြုပြင်ထားခြင်းနှင့် အခြားတိုးတက်မှုများ ပါဝင်ပါတယ်။
@@ -53,7 +41,7 @@
                         အင်တာနက် မရှိချိန်တွင်လည်း အချိန်မရွေး အသုံးပြုနိုင်ပါတယ်။
                     </li>
                     <li>
-                        ကြော်ငြာများမပါရှိခြင်း၊ အခမဲ့ဖြစ်ခြင်းအပြင် open source ကိုပါ GitHub ကနေရယူနိုင်ပါတယ်။
+                        အခမဲ့ဖြစ်ခြင်းအပြင် open source ကိုပါ GitHub ကနေရယူနိုင်ပါတယ်။
                     </li>
                 </ul>
             </div>
