Add margin to mat-form-field

--- a/src/styles/mat-components.scss
+++ b/src/styles/mat-components.scss
@@ -5,6 +5,8 @@
     box-sizing: border-box;
     display: flex;
     flex: 1 1 100%;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 // textarea
