Improve app rate logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -127,7 +127,7 @@
                 </ion-row>
                 <ion-row>
                     <ion-col class="footer-buttons">
-                        <ion-button shape="round" fill="clear" color="medium" (click)="promptForRating()">
+                        <ion-button shape="round" fill="clear" color="medium" (click)="openAppReview()">
                             <ion-icon name="star"></ion-icon>&nbsp;&nbsp;<span class="my-uni">သုံးသပ်ချက်ပေးရန်</span>
                         </ion-button>
                         <ion-button shape="round" fill="clear" color="medium" (click)="showShareSheet()">
