--- a/src/app/about/about-modal.component.html
+++ b/src/app/about/about-modal.component.html
@@ -12,7 +12,7 @@
                 <h3 class="subtitle">ယခုဗားရှင်းအသစ်တွင်</h3>
                 <ul class="features-list">                    
                     <li>
-                        ကြော်ငြာများကို ပိတ်ထားနိုင်သော ခလုတ်ပါရှိလာခြင်း၊ အချို့သော bug များကိုပြုပြင်ထားခြင်းနှင့် အခြားတိုးတက်မှုများ ပါဝင်ပါတယ်။
+                        စာရိုက်ဧရိယာအော်တိုချဲ့ခြင်းကို ပိတ်ထားနိုင်သော ခလုတ်ပါရှိလာခြင်း၊ အချို့သော bug များကိုပြုပြင်ထားခြင်းနှင့် အခြားတိုးတက်မှုများ ပါဝင်ပါတယ်။
                     </li>
                 </ul>
             </div>
